[package]
name = "apms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
spin = "0.9.8"
zip = "1.1.4"
zip-extract = "0.1.3"
