[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
parking_lot = "0.12.2"
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }